
7.90  2018-08-08

7.89  2018-08-06
  - Mojolicious has a new logo!

7.88  2018-07-11
  - Added EXPERIMENTAL bytes_read, bytes_written and transition methods to
    Mojo::IOLoop::Stream.
  - Added transition event to Mojo::IOLoop::Stream.
  - Improved default request ids generated by Mojo::Message::Request to be a
    little more unique.
  - Fixed a bug where prefork tests would fail if a prefork server was already
    running.

7.87  2018-07-04
  - Added optional support for Cpanel::JSON::XS to Mojo::JSON for much better
    JSON encoding and decoding performance. That also means Mojo::JSON can no
    longer encode the two Unicode whitespace characters u2028 and u2029, since
    this is unsupported by Cpanel::JSON::XS.
  - Improved Mojo::JSON to encode unknown reference types to "null",
    consistently with Cpanel::JSON::XS.

7.86  2018-07-02
  - Added template attribute to Mojolicious::Command.
  - Added spawn event to Mojo::IOLoop::Subprocess.
  - Improved Mojo::IOLoop::Subprocess to only fork new processes after the event
    loop has been started.

7.85  2018-06-17
  - Removed deprecated build_tx, config, handler and log methods from Mojo.
  - Added promisify method to Mojo::UserAgent::Transactor.
  - Improved Mojolicious::Command to die on template errors.

7.84  2018-06-05
  - Fixed a bug where test servers would be started when reusing a
    Mojo::UserAgent object after fork.

7.83  2018-06-02
  - Replaced MOJO_DAEMON_DEBUG and MOJO_USERAGENT_DEBUG environment variables
    with MOJO_SERVER_DEBUG and MOJO_CLIENT_DEBUG. (anparker)
  - Updated IO::Socket::SSL requirement to 2.009 for ALPN support.
  - Added modules Mojo::IOLoop::Stream::HTTPClient,
    Mojo::IOLoop::Stream::HTTPServer, Mojo::IOLoop::Stream::WebSocketClient and
    Mojo::IOLoop::Stream::WebSocketServer. (anparker)
  - Added transition method to Mojo::IOLoop. (anparker)
  - Added close_connections method to Mojo::Server::Daemon. (anparker)