@@ -7,4 +7,5 @@ plan skip_all => 'set TEST_POD to enable this test (developer only!)'
 plan skip_all => 'Test::Pod::Coverage 1.04+ required for this test!'
   unless eval 'use Test::Pod::Coverage 1.04; 1';
 
-all_pod_coverage_ok({also_private => ['build_tx', 'config', 'handler', 'log']});
+all_pod_coverage_ok(
+  {also_private => ['build_tx', 'config', 'expect_close', 'handler', 'log']});
