@@ -1,5 +1,8 @@
 
 7.90  2018-08-08
+  - Deprecated expect_close attribute in Mojo::Content.
+  - Fixed an RFC 7230 compliance problem where HTTP/1.1 responses were sometimes
+    incomplete.
 
 7.89  2018-08-06
   - Mojolicious has a new logo!
